<resources>
    <string name="app_name">GroceryList</string>
    <string name="action_settings">Settings</string>
    <string name="add_first_tiem">Add First Item</string>
    <string name="enter_item">Enter Item</string>
    <string name="grocery_name">Grocery Name</string>
    <string name="grocery_qnty">Quantity</string>
    <string name="save_button_text">Save</string>
    <string name="title_activity_list">ListActivity</string>
    <string name="are_you_sure">Are You Sure?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
</resources>
