<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <RelativeLayout
            android:padding="23dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textAlert"
                android:text="@string/are_you_sure"
                android:layout_centerHorizontal="true"
                android:paddingTop="5dp"
                android:textSize="18sp"
                android:textStyle="bold"
                />


            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/noButton"
                android:background="@color/colorAccent"
                android:text="@string/no"
                android:textAllCaps="false"
                android:layout_marginTop="20dp"
                android:layout_below="@+id/textAlert"
                android:textColor="@android:color/white"
                />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/yesButton"
                android:background="@color/colorAccent"
                android:text="@string/yes"
                android:textAllCaps="false"
                android:layout_marginTop="20dp"
                android:layout_alignParentRight="true"
                android:layout_alignBottom="@+id/noButton"
                android:textColor="@android:color/white"
                />
        </RelativeLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>